python/openswmm/engine/_common.pxd


cdef extern from "openswmm_links.h":
    # Identity
    cdef int         swmm_link_count(SWMM_Engine e)
    cdef int         swmm_link_index(SWMM_Engine e, const char* id)
    cdef const char* swmm_link_id(SWMM_Engine e, int idx)
    # Creation
    cdef int swmm_link_add(SWMM_Engine e, const char* id, int type)
    cdef int swmm_link_pop_last(SWMM_Engine e, const char* id)
    # Connectivity
    cdef int swmm_link_set_nodes(SWMM_Engine e, int idx, int from_node, int to_node)
    cdef int swmm_link_get_from_node(SWMM_Engine e, int idx, int* node_idx)
    cdef int swmm_link_get_to_node(SWMM_Engine e, int idx, int* node_idx)
    # Geometry setters
    cdef int swmm_link_set_length(SWMM_Engine e, int idx, double length)
    cdef int swmm_link_set_roughness(SWMM_Engine e, int idx, double n)
    cdef int swmm_link_set_offset_up(SWMM_Engine e, int idx, double offset)
    cdef int swmm_link_set_offset_dn(SWMM_Engine e, int idx, double offset)
    cdef int swmm_link_set_initial_flow(SWMM_Engine e, int idx, double flow)
    cdef int swmm_link_set_max_flow(SWMM_Engine e, int idx, double flow)
    # Engine gaps BN-LINK-01a / -01b — symmetric getters added 2026-05-25.
    cdef int swmm_link_get_initial_flow(SWMM_Engine e, int idx, double* flow)
    cdef int swmm_link_get_max_flow(SWMM_Engine e, int idx, double* flow)
    # Engine gap BN-LINK-02 — orifice TYPE (SIDE=0 / BOTTOM=1) — added 2026-05-25.
    cdef int swmm_link_get_orifice_type(SWMM_Engine e, int idx, int* type_)
    cdef int swmm_link_set_orifice_type(SWMM_Engine e, int idx, int type_)
    # Engine gap BN-LINK-03 — weir TYPE (5 values) — added 2026-05-25.
    cdef int swmm_link_get_weir_type(SWMM_Engine e, int idx, int* type_)
    cdef int swmm_link_set_weir_type(SWMM_Engine e, int idx, int type_)
    # Engine gap BN-LINK-04 — outlet rating type (4 values) + exponent — 2026-05-25.
    cdef int swmm_link_get_outlet_rating_type(SWMM_Engine e, int idx, int* type_)
    cdef int swmm_link_set_outlet_rating_type(SWMM_Engine e, int idx, int type_)
    cdef int swmm_link_get_outlet_expon(SWMM_Engine e, int idx, double* expon)
    cdef int swmm_link_set_outlet_expon(SWMM_Engine e, int idx, double expon)
    # Engine gap BN-LINK-05 — pump startup / shutoff depth — added 2026-05-25.
    cdef int swmm_link_get_pump_startup_depth(SWMM_Engine e, int idx, double* depth)
    cdef int swmm_link_set_pump_startup_depth(SWMM_Engine e, int idx, double depth)
    cdef int swmm_link_get_pump_shutoff_depth(SWMM_Engine e, int idx, double* depth)
    cdef int swmm_link_set_pump_shutoff_depth(SWMM_Engine e, int idx, double depth)
    # Engine gap BN-LINK-06 — orifice open/close rate (1/s) — added 2026-05-25.
    cdef int swmm_link_get_orifice_open_close_rate(SWMM_Engine e, int idx, double* rate)
    cdef int swmm_link_set_orifice_open_close_rate(SWMM_Engine e, int idx, double rate)
    # Cross-section
    cdef int swmm_link_set_xsect(SWMM_Engine e, int idx, int shape,
                                  double g1, double g2, double g3, double g4)
    cdef int swmm_link_get_xsect(SWMM_Engine e, int idx,
                                  int* shape, double* g1, double* g2,
                                  double* g3, double* g4)
    # Geometry getters
    cdef int swmm_link_get_type(SWMM_Engine e, int idx, int* type)
    cdef int swmm_link_get_length(SWMM_Engine e, int idx, double* length)
    cdef int swmm_link_get_roughness(SWMM_Engine e, int idx, double* n)
    cdef int swmm_link_get_slope(SWMM_Engine e, int idx, double* slope)
    cdef int swmm_link_get_offset_up(SWMM_Engine e, int idx, double* offset)
    cdef int swmm_link_get_offset_dn(SWMM_Engine e, int idx, double* offset)
    # Hydraulic state
    cdef int swmm_link_get_flow(SWMM_Engine e, int idx, double* flow)
    cdef int swmm_link_set_flow(SWMM_Engine e, int idx, double flow)
    cdef int swmm_link_get_depth(SWMM_Engine e, int idx, double* depth)
    cdef int swmm_link_get_velocity(SWMM_Engine e, int idx, double* velocity)
    cdef int swmm_link_get_capacity(SWMM_Engine e, int idx, double* capacity)
    cdef int swmm_link_get_volume(SWMM_Engine e, int idx, double* volume)
    # Runtime forcing
    cdef int swmm_link_set_control_setting(SWMM_Engine e, int idx, double setting)
    cdef int swmm_link_get_control_setting(SWMM_Engine e, int idx, double* setting)
    cdef int swmm_link_set_target_setting(SWMM_Engine e, int idx, double setting)
    cdef int swmm_link_get_target_setting(SWMM_Engine e, int idx, double* setting)
    cdef int swmm_link_set_closed(SWMM_Engine e, int idx, int closed)
    cdef int swmm_link_get_closed(SWMM_Engine e, int idx, int* closed)
    # Pump
    cdef int swmm_link_set_pump_curve(SWMM_Engine e, int idx, int curve_idx)
    cdef int swmm_link_get_pump_curve(SWMM_Engine e, int idx, int* curve_idx)
    cdef int swmm_link_set_pump_init_state(SWMM_Engine e, int idx, int on)
    cdef int swmm_link_get_pump_init_state(SWMM_Engine e, int idx, int* on)
    # Weir
    cdef int swmm_link_set_crest_height(SWMM_Engine e, int idx, double h)
    cdef int swmm_link_get_crest_height(SWMM_Engine e, int idx, double* h)
    cdef int swmm_link_set_discharge_coeff(SWMM_Engine e, int idx, double cd)
    cdef int swmm_link_get_discharge_coeff(SWMM_Engine e, int idx, double* cd)
    cdef int swmm_link_set_end_contractions(SWMM_Engine e, int idx, double n)
    cdef int swmm_link_get_end_contractions(SWMM_Engine e, int idx, double* n)
    # Loss coefficients
    cdef int swmm_link_set_loss_coeff(SWMM_Engine e, int idx, double inlet, double outlet, double avg)
    cdef int swmm_link_get_loss_coeff(SWMM_Engine e, int idx, double* inlet, double* outlet, double* avg)
    cdef int swmm_link_set_flap_gate(SWMM_Engine e, int idx, int has_gate)
    cdef int swmm_link_get_flap_gate(SWMM_Engine e, int idx, int* has_gate)
    cdef int swmm_link_set_seep_rate(SWMM_Engine e, int idx, double rate)
    cdef int swmm_link_get_seep_rate(SWMM_Engine e, int idx, double* rate)
    cdef int swmm_link_set_culvert_code(SWMM_Engine e, int idx, int code)
    cdef int swmm_link_get_culvert_code(SWMM_Engine e, int idx, int* code)
    cdef int swmm_link_set_barrels(SWMM_Engine e, int idx, int n)
    cdef int swmm_link_get_barrels(SWMM_Engine e, int idx, int* n)
    # Quality
    cdef int swmm_link_get_quality(SWMM_Engine e, int link_idx, int pollutant_idx, double* conc)
    # Statistics
    cdef int swmm_link_get_stat_max_flow(SWMM_Engine e, int idx, double* val)
    cdef int swmm_link_get_stat_max_velocity(SWMM_Engine e, int idx, double* val)
    cdef int swmm_link_get_stat_max_filling(SWMM_Engine e, int idx, double* val)
    cdef int swmm_link_get_stat_vol_flow(SWMM_Engine e, int idx, double* val)
    cdef int swmm_link_get_stat_surcharge_time(SWMM_Engine e, int idx, double* val)
    # Pump statistics
    cdef int swmm_link_get_stat_pump_cycles(SWMM_Engine e, int idx, int* cycles)
    cdef int swmm_link_get_stat_pump_on_time(SWMM_Engine e, int idx, double* seconds)
    cdef int swmm_link_get_stat_pump_volume(SWMM_Engine e, int idx, double* volume)
    cdef int swmm_link_get_pump_stats_bulk(SWMM_Engine e, int* cycles,
                                            double* on_time, double* volume,
                                            int count) nogil
    # Hydraulic power
    cdef int swmm_link_get_hyd_power(SWMM_Engine e, int idx, double* power)
    # Bulk access
    # Bulk link accessors — pure C memory ops, safe to call without the GIL.
    cdef int swmm_link_get_flows_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_link_get_depths_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_link_set_flows_bulk(SWMM_Engine e, const double* buf, int count) nogil
    cdef int swmm_link_get_quality_bulk(SWMM_Engine e, int pollutant_idx, double* buf, int count) nogil
    # Phase 3 bulk getters — velocities/capacities/volumes/control/target/power, ids.
    cdef int swmm_link_get_velocities_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_link_get_capacities_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_link_get_volumes_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_link_get_control_settings_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_link_get_target_settings_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_link_get_hyd_powers_bulk(SWMM_Engine e, double* buf, int count) nogil
    cdef int swmm_link_get_ids_bulk(SWMM_Engine e, char* buf, int stride, int count) nogil
    # Rename
    cdef int swmm_link_rename(SWMM_Engine e, int idx, const char* newId)
    cdef int swmm_link_get_tag(SWMM_Engine e, int idx, char* buf, int buflen)
    cdef int swmm_link_set_tag(SWMM_Engine e, int idx, const char* tag)
